force-app/main/default/objects/Bit_infomation__c/Bit_infomation__c.object-meta.xml
<CustomObject>
    <label>入札会員情報</label>
    <nameField>
        <label>入札会員情報</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>