force-app/main/default/objects/Bit_infomation__c/fields/Bit_date__c.field-meta.xml
<CustomField>
    <fullName>Bit_date__c</fullName>
    <label>入札日時</label>
    <type>DateTime</type>
</CustomField>