force-app/main/default/objects/Bit_infomation__c/fields/Bit_price__c.field-meta.xml
<CustomField>
    <fullName>Bit_price__c</fullName>
    <label>入札価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>