force-app/main/default/objects/Bit_infomation__c/fields/Stock_number__c.field-meta.xml
<CustomField>
    <fullName>Stock_number__c</fullName>
    <label>管理番号</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>入札会員情報</relationshipLabel>
    <relationshipName>Bit_infomation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>