force-app/main/default/objects/Bit_infomation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売担当者</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>入札会員情報</relationshipLabel>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>